# var_pdf

./: .gitignore  README.md  eval.py  main.py  main_dsocr.py  main_v0.py  main_v1.py  pyproject.toml  qa.py  search.py
nbs/: QA_v10_86.ipynb
